[gd_scene format=3 uid="uid://b5f6beyvexg5g"]

[ext_resource type="Script" uid="uid://dammxwyg10l3f" path="res://scenes/ui/store_screen_ui.gd" id="1_h2byj"]
[ext_resource type="Texture2D" uid="uid://bldxvi5dvro6k" path="res://graphics/icons/apple.png" id="1_y7k2s"]
[ext_resource type="Texture2D" uid="uid://bj3yq5p04rd6t" path="res://graphics/icons/sack 2.png" id="2_h2byj"]
[ext_resource type="Texture2D" uid="uid://dsn4f1yaqlb8u" path="res://graphics/icons/wood.png" id="3_rvw0u"]

[node name="StoreScreenUI" type="Control" unique_id=1237760155]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2byj")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=533492334]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=151261873]
layout_mode = 2

[node name="Spacer5" type="Control" parent="MarginContainer/HBoxContainer" unique_id=897844786]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=1715066781]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=1724904431]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect1" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=248019639]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("1_y7k2s")
expand_mode = 1
stretch_mode = 5

[node name="Label1" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=2085205279]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Apple"
horizontal_alignment = 1

[node name="Button1" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=1146454621]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../VBoxContainer2/Button2")
focus_neighbor_bottom = NodePath(".")
theme_override_font_sizes/font_size = 30
text = "Buy"

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=1616577448]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer3" type="Control" parent="MarginContainer/HBoxContainer" unique_id=1927753222]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=620023292]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2" unique_id=470639219]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2" unique_id=131743512]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_h2byj")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2" unique_id=1802478418]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Seeds"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2" unique_id=2115458232]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../VBoxContainer/Button1")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../VBoxContainer3/Button3")
focus_neighbor_bottom = NodePath(".")
theme_override_font_sizes/font_size = 30
text = "Buy"

[node name="Spacer4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2" unique_id=1538894651]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer4" type="Control" parent="MarginContainer/HBoxContainer" unique_id=1100063817]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=1757852866]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer3" unique_id=1162548716]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer3" unique_id=697420895]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_rvw0u")
expand_mode = 1
stretch_mode = 5

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3" unique_id=1438355989]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Wood"
horizontal_alignment = 1

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer3" unique_id=253112312]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../VBoxContainer2/Button2")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
theme_override_font_sizes/font_size = 30
text = "Buy"

[node name="Spacer6" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer3" unique_id=1851642946]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer7" type="Control" parent="MarginContainer/HBoxContainer" unique_id=9323642]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=1652667675]
layout_mode = 2

[node name="Spacer2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer4" unique_id=248986246]
layout_mode = 2
size_flags_vertical = 3

[node name="ReturnButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer4" unique_id=744685450]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Return"

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer4" unique_id=1735721706]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer6" type="Control" parent="MarginContainer/HBoxContainer" unique_id=1878502355]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer3/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer4/ReturnButton" to="." method="_on_return_button_pressed"]
